--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.21</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
