--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,26 @@
+server:
+  port: 8080
+
+---
 spring:
+  profiles: dev
   redis:
     #redis数据库名称  从0到15,默认为db0
     database: 0
-    password:
+    # 连接redis的密码,requirpass(跟redis的master和slave同步密码masterauth两回事)
+    password: ptmind
     sentinel:
       # master的名字是在哨兵进程里定义的
       master: master
       nodes: 127.0.0.1:6379,127.0.0.1:6380,127.0.0.1:26379
+---
+spring:
+  profiles: test
+  redis:
+    #redis数据库名称  从0到15,默认为db0
+    database: 0
+    password: ptmind
+    sentinel:
+      # master的名字是在哨兵进程里定义的
+      master: mymaster
+      nodes: 172.16.100.81:6378,172.16.100.81:6379,172.16.100.81:26379
